# prime_benchmark

./: CMakeLists.txt  README.md  argument_parser.cpp  argument_parser.h  decomposition.cpp  decomposition.h  example.txt  main.cpp  main.h  prime_finder.cpp  prime_finder.h  prime_finder_parallel.cpp  prime_finder_parallel.h  test_decompose.cpp  test_decompose.h  test_times.cpp  test_times.h  utils.cpp  utils.h
